Add inner shadow to main content scroll view

--- a/themes/boxsubmus/assets/sass/main.scss
+++ b/themes/boxsubmus/assets/sass/main.scss
@@ -131,6 +131,13 @@ main {
     padding: $content-padding;
     flex-grow: 1;
     overflow-y: auto;
+
+    $shadow_opacity: 0.35;
+    $shadow_blur: 24px;
+
+    -webkit-box-shadow: inset 0px 0px $shadow_blur 0px rgba(0, 0, 0, $shadow_opacity);
+    -moz-box-shadow: inset 0px 0px $shadow_blur 0px rgba(0, 0, 0, $shadow_opacity);
+    box-shadow: inset 0px 0px $shadow_blur 0px rgba(0, 0, 0, $shadow_opacity);
   }
 }
 
