I dislike the background image now

--- a/themes/boxsubmus/assets/sass/main.scss
+++ b/themes/boxsubmus/assets/sass/main.scss
@@ -143,7 +143,7 @@ main {
     flex-grow: 1;
     overflow-y: auto;
 
-    background-image: url("/article-bg.png");
+    // background-image: url("/article-bg.png");
     background-color: (1, 1, 1, 0.2);
     background-position: top;
     background-repeat: repeat-x;
