Use .webp actually

--- a/themes/boxsubmus/layouts/_default/baseof.html
+++ b/themes/boxsubmus/layouts/_default/baseof.html
@@ -9,8 +9,8 @@
       <div class="navbar-logo">
         <div class="margin-16px">
           <a href="/">
-            <img src="/images/logo.png" style="width: 200px; margin: auto;"><br>
-            <img src="/images/wordmark.png" style="width: 200px; margin: auto; color: #9b8778; border-radius: 0px;">
+            <img src="/images/logo.webp" style="width: 200px; margin: auto;"><br>
+            <img src="/images/wordmark.webp" style="width: 200px; margin: auto; color: #9b8778; border-radius: 0px;">
           </a>
   
         </div>
