--- a/themes/boxsubmus/assets/sass/main.scss
+++ b/themes/boxsubmus/assets/sass/main.scss
@@ -1,8 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Sen:wght@400;700&display=swap");
 
-$color-background: #1c1c1f;
-$color-content-background: #2e2f31;
-$color-title-background: #232327;
+$color-background: #171717;
+$color-title-background: #242424;
+$color-content-background: #303030;
+
+// Alternative palette:
+// $color-background: #1c1c1f;
+// $color-title-background: #232327;
+// $color-content-background: #2e2f31;
+
 $color-separator: #3f3f3f;
 $color-primary: #bea693;
 $color-text: #d0d1d4;
