Remove background from allyway images

--- a/themes/boxsubmus/assets/sass/main.scss
+++ b/themes/boxsubmus/assets/sass/main.scss
@@ -83,6 +83,10 @@ img {
   border-radius: 0.5vh;
 }
 
+.allyway {
+  filter: invert(0.8);
+}
+
 hr {
   box-sizing: content-box;
   border-width: 0;
