--- a/themes/boxsubmus/layouts/404.html
+++ b/themes/boxsubmus/layouts/404.html
@@ -6,10 +6,10 @@
   </div>
   <div class="content">
     <div class="main-content-width">
-        I have no idea what you were looking for, but it doesn't currently exist. If it SHOULD exist, please contact us!
+        No idea what you were looking for, but it doesn't currently exist. If it SHOULD exist, please contact us!
         <br>
         <br>
-        <img src="/images/home/404.png">
+        <img src="/images/home/404.png" class="allyway">
     </div>
   </div>
 {{ end }}
