--- a/themes/boxsubmus/assets/sass/main.scss
+++ b/themes/boxsubmus/assets/sass/main.scss
@@ -1,8 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Sen:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sen:wght@400..800&family=Material+Symbols+Rounded:FILL@0..1");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sen:wght@400..800&family=Material+Symbols+Rounded:FILL@0..1");
 
-$color-background: #171717;
+$color-background: #202022;
 $color-title-background: #242424;
-$color-content-background: #303030;
+$color-content-background: #2e2f31;
 
 // Alternative palette:
 // $color-background: #1c1c1f;
@@ -32,11 +33,12 @@ $separator-width: 0px;
 }
 
 html, body {
-  font-family: sans-serif;
+  font-family: "Poppins", sans-serif;
+  font-size: 13px;
+  background-color: $color-background;
 }
 
 body {
-  background-color: $color-background;
   color: $color-text;
   margin: 0px;
 }
@@ -57,16 +59,39 @@ footer {
 }
 
 .meta {
-  border-bottom: $separator-width solid $color-separator;
-  background-image: url("/article-bg.png");
-  background-color: $color-title-background;
-}
+  position: relative;
 
-.meta-content {
-  padding-left: $content-padding;
+  .bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 
-  h1 {
-    font-weight: 600;
+    z-index: 0;
+    pointer-events: none;
+
+    /*
+    border-bottom: $separator-width solid $color-separator;
+    background-color: $color-title-background;
+    */
+    background-image: url("/article-bg.png");
+
+    mask-image: linear-gradient(to left, black 90%, transparent 100%);
+    // -webkit-mask-image: linear-gradient(to left, black 0%, transparent 100%);
+  }
+
+  .meta-content {
+    padding-left: $content-padding;
+  
+    h1 {
+      font-weight: 600;
+    }
+  }
+
+  .parent > *:not(.background-child) {
+    position: relative;
+    z-index: 1;
   }
 }
 
@@ -76,6 +101,7 @@ h1, h2 {
 
 a {
   color: $color-primary;
+  text-decoration: none;
 }
 
 img {
@@ -117,6 +143,8 @@ hr {
 
   flex-grow: 1;
   overflow-y: hidden;
+
+  min-width: 200px;
 
   .content {
     padding: 16px;
@@ -172,6 +200,8 @@ main {
     -webkit-box-shadow: inset 0px 0px $shadow_blur 0px rgba(0, 0, 0, $shadow_opacity);
     -moz-box-shadow: inset 0px 0px $shadow_blur 0px rgba(0, 0, 0, $shadow_opacity);
     box-shadow: inset 0px 0px $shadow_blur 0px rgba(0, 0, 0, $shadow_opacity);
+
+    border-radius: 16px 0px 0px 16px;
   }
 }
 
@@ -184,5 +214,41 @@ main {
 }
 
 .main-content-width {
-  max-width: 768px;
+  margin: 0 auto;
+  max-width: 768px !important;
+  padding: 2rem;
+}
+
+.sidebar-link {
+  display: flex;
+  flex-direction: column;
+  user-select: none;
+  position: relative;
+
+  .main {
+    display: flex;
+    margin: 1px 0px;
+    max-width: 100%;
+    overflow: hidden;
+
+    a {
+      margin: 0px;
+      border-radius: 5px;
+      padding: 6px 12px;
+      display: flex;
+      flex-grow: 1;
+      flex-direction: column;
+      overflow: hidden;
+      cursor: pointer;
+
+      &:hover, &.active {
+        background-color: rgba(178, 190, 212, 0.1);
+        color: white;
+      }
+    }
+  }
+}
+
+i {
+  font-family: "Material Symbols Rounded";
 }
