--- a/themes/boxsubmus/layouts/_default/home.html
+++ b/themes/boxsubmus/layouts/_default/home.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+  {{ partial "meta.html" . }}
   <div class="content">
     <div class="main-content-width">
       {{ .Content }}
