--- a/themes/boxsubmus/layouts/_default/single.html
+++ b/themes/boxsubmus/layouts/_default/single.html
@@ -1,9 +1,5 @@
 {{ define "main" }}
-  <div class="meta">
-    <div class="meta-content">
-      <h1>{{ .Title }}</h1>
-    </div>
-  </div>
+  {{ partial "meta.html" . }}
   <div class="content">
     {{ if .Date }}
     {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
