--- a/themes/boxsubmus/layouts/_default/baseof.html
+++ b/themes/boxsubmus/layouts/_default/baseof.html
@@ -2,6 +2,7 @@
 <html lang="{{ or site.Language.LanguageCode site.Language.Lang }}" dir="{{ or site.Language.LanguageDirection `ltr` }}">
 <head>
   {{ partial "head.html" . }}
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -14,6 +15,11 @@
           </a>
   
         </div>
+        <!--
+        <div class="navbar-button">
+          <span class="material-icons-round">menu</span>
+        </div>
+      -->
       </div>
 
       <div class="navbar">
