--- a/themes/boxsubmus/assets/sass/main.scss
+++ b/themes/boxsubmus/assets/sass/main.scss
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sen:wght@400..800&family=Material+Symbols+Rounded:FILL@0..1");
 
-$color-background: #202022;
+$color-background: #1c1c1f;
 $color-title-background: #242424;
-$color-content-background: #2e2f31;
+$color-content-background: #28292c;
 
 // Alternative palette:
 // $color-background: #1c1c1f;
@@ -229,8 +229,10 @@ main {
     box-shadow: inset 0px 0px $shadow_blur 0px rgba(0, 0, 0, $shadow_opacity);
 
     border-radius: 16px;
+    margin: 0px 16px 0px 16px;
     @include respond-to-wide {
-      border-radius: 16px 0px 0px 16px;
+      margin: 0px 16px 0px 0px;
+      // border-radius: 16px 0px 0px 16px;
     }
   }
 }
