--- a/themes/boxsubmus/layouts/partials/footer.html
+++ b/themes/boxsubmus/layouts/partials/footer.html
@@ -1,1 +1,1 @@
-<p>© 2021-{{ now.Year }} <b>Boxsubmus</b> — <a href="https://github.com/Boxsubmus/boxsubmus.com/blob/main/LICENSE">MIT License</a></p>
+<p>Copyright © 2021-{{ now.Year }} <b>Boxsubmus LLC</b> — <a href="https://github.com/Boxsubmus/boxsubmus.com/blob/main/LICENSE">MIT License</a></p>
